2014-07-09  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/hosts.c (struct host): Remove useless psoc element.
	(host_rm, hosts_set_pid): Adjust for host structure change.
	(hosts_new): Take host socket as a function argument instead of creating
	an unnamed socket pair. Adjust return value accordingly.

	* src/attack.c (attack_network): Adjust for hosts_new() function change.
	Close socket for child process after the fork.

2014-07-07  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/openvassd.c (check_client, get_x509_dname): Remove functions.
	(scanner_thread): Remove useless dname checking as user-management is
	not part of the scanner anymore.

	* tools/openvas-mkcert-client.in: Don't generate dname file.

	* doc/openvassd.8.in: Update documentation.

2014-07-02  Henri Doreau <henri.doreau@gmail.com>

	* src/openvassd (main): Removed clumsy and unneeded string duplication.

2014-07-02  Henri Doreau <henri.doreau@gmail.com>

	* src/openvassd.c (global_options): Change type to GHashTable.
	(arg_replace_value): Removed unused function.
	(main_loop, init_plugins, init_openvassd, main): Update operations on
	global_options and function prototypes accordingly.

2014-07-02  Henri Doreau <henri.doreau@gmail.com>

	* src/openvassd.c (global_options): Renamed variable for consistency.
	(global_iana_socket, global_plugins, global_preferences, global_options)
	(reload, loading_stop, ovas_scanner_ctx ): Mark as static and removed
	superfluous initializations.

2014-07-01  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/openvassd.c (gcrypt_init): New function.
	(main): Initialize libgcrypt.

	* CMakeLists.txt (GCRYPT_LDFLAGS, GCRYPT_CFLAGS): New variables.

	* src/CMakeLists.txt: Link against libgcrypt.

2014-06-26  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/hosts.c (forward), src/pluginlaunch.c (process_internal_msg): Fix
	memory leaks.

2014-06-25  Hani Benhabiles  <hani.benhabiles@greenbone.net>
